fix profile align and portfolio layout to grid

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,10 @@ footer {
   background-color: #e9e9e9;
 }
 
+.card {
+  padding: 1em;
+}
+
 /* Class Selector */
 
 .main-nav h1 {
@@ -141,6 +145,7 @@ footer h3 {
   .profile {
     display: flex;
     flex-direction: row-reverse;
+    align-items: center;
     margin: 3em 1.5em;
   }
 
@@ -155,14 +160,10 @@ footer h3 {
     text-align: left;
   }
 
-  .card {
-    width: 45%;
-    margin: 1em;
-  }
 
   .card-container {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
 
@@ -216,9 +217,6 @@ footer h3 {
     margin: 3em 1.25em;
   }
 
-  .card {
-    width: 30%;
-  }
 
   .contact p {
     margin: 2em 13em;
